--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: ACN IBO情報ポータル
+title: "[ACN IBO情報ポータル](https://faq.acn.jp.net)"
 # description: [https://faq.acn.jp.net](https://faq.acn.jp.net)
